--- a/templates/default/gitlab.yml.erb
+++ b/templates/default/gitlab.yml.erb
@@ -107,14 +107,14 @@ production: &base
   ## OmniAuth settings
   omniauth:
     # Allow login via Twitter, Google, etc. using OmniAuth providers
-    enabled: false
+    enabled: <%= node.gitlab.omniauth.enabled ? 'true' : 'false'  %>
 
     # CAUTION!
     # This allows users to login without having a user account first (default: false).
     # User accounts will be created automatically when authentication was successful.
-    allow_single_sign_on: false
+    allow_single_sign_on: <%= node.gitlab.omniauth.allow_single_sign_on ? 'true' : 'false'  %>
     # Locks down those users until they have been cleared by the admin (default: true).
-    block_auto_created_users: true
+    block_auto_created_users: <%= node.gitlab.omniauth.block_auto_created_users ? 'true' : 'false'  %>
 
     ## Auth providers
     # Uncomment the following lines and fill in the data of the auth provider you want to use
@@ -130,6 +130,9 @@ production: &base
       #     app_secret: 'YOUR APP SECRET'}
       # - { name: 'github', app_id: 'YOUR APP ID',
       #     app_secret: 'YOUR APP SECRET' }
+      <% node.gitlab.omniauth.providers.each do |provider| %>
+      - { name: '<%= provider %>'}
+      <% end %>
 
 
 
